# pumc-course-select

./: README.md  main.ipynb  main.py  pyproject.toml
